tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_traits_errors_on_unknown_type_in_trait_where_clause/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Could not resolve 'Unknown' in path
  ┌─ src/main.nr:2:35
  │
2 │         pub trait Foo<T> where T: Unknown {}
  │                                   -------
  │

Aborting due to 1 previous error
